# bookkeeper

./: .gitignore  ChangeLog.md  README.md  pyproject.toml  setup.py  tox.ini
src/bookkeeper/: defparser.py  ledger.py  main.py  txparser.py
testdata/2012/: data-2012-02.txt  ledger-defs.txt
testdata/2012-date-error/: data-2012-02.txt  ledger-defs.txt
tests/: conftest.py  test_block.py  test_command_line.py  test_defparser.py  test_ledger.py  test_output.py  test_parser.py
